# grasp_data_generate

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
config/: generate_parameter.cfg
include/grasp_detect/: grasp_classify_dataset_generate.h  grasp_cluster.h  grasp_dataset_generate.h  grasp_detector_one_stage.h  grasp_detector_two_stage.h  grasp_filter.h  pointnet_classify_client.h  pointnet_grasp_client.h
include/grasp_detect/candidate/: antipodal.h  candidates_generator.h  finger_hand.h  frame_estimator.h  hand.h  hand_search.h  hand_set.h  local_frame.h
include/grasp_detect/util/: cloud.h  config_file.h  eigen_utils.h  grasp.h  parameter.h  params_manager.h  plot.h  point_list.h  transform.h
src/app/: detect_grasps_one_stage.cpp  detect_grasps_one_stage_server.cpp  detect_grasps_two_stage.cpp  detect_grasps_two_stage_server.cpp  generate_classify_dataset.cpp  generate_grasp_dataset.cpp  read_grasp_from_net.cpp  read_grasp_from_txt.cpp  tsdf_server.cpp
src/grasp_detect/: grasp_classify_dataset_generate.cpp  grasp_cluster.cpp  grasp_dataset_generate.cpp  grasp_detector_one_stage.cpp  grasp_detector_two_stage.cpp  grasp_filter.cpp  pointnet_classify_client.cpp  pointnet_grasp_client.cpp
src/grasp_detect/candidate/: antipodal.cpp  candidates_generator.cpp  finger_hand.cpp  frame_estimator.cpp  hand.cpp  hand_search.cpp  hand_set.cpp  local_frame.cpp
src/grasp_detect/util/: cloud.cpp  config_file.cpp  eigen_utils.cpp  params_manager.cpp  plot.cpp  point_list.cpp  transform.cpp
